fixed the modal height on mobile phones

--- a/css/style.css
+++ b/css/style.css
@@ -141,6 +141,9 @@ form {
     /* display: flex;
     justify-content: center;
     align-items: center; */
+    position: static;
+    top: 0;
+    left: 0;
   }
 
   .form__textSection {
@@ -175,4 +178,11 @@ form {
 
 .modal-show {
   display: block;
+}
+
+@media (width < 50rem) {
+  .modal {
+    min-height: 100vh;
+    border-radius: 0;
+  }
 }
